starrs/flaresolverr/resources/flaresolverr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: starrs
  name: flaresolverr
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        name: flaresolverr
        app: flaresolverr
        part-of: starrs
    spec:
      containers:
        - name: flaresolverr
          image: flaresolverr-image ***REMOVED*** ghcr.io/flaresolverr/flaresolverr - controlled by Kustomize
          ports:
            - containerPort: 8191
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
