starrs/flaresolverr/resources/flaresolverr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: flaresolverr
  name: flaresolverr
spec:
  ports:
    - name: "flaresolverr-8191"
      port: 8191
      protocol: TCP
      targetPort: 8191
  selector:
    app: flaresolverr
