starrs/flaresolverr/resources/flaresolverr-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr
  namespace: starrs
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: consolidated-gateway
      namespace: gateway
  hostnames:
    - flaresolverr.k8s.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flaresolverr
          port: 8191
